[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/2x/Screen@2x.png" type="Texture" id=1]
[ext_resource path="res://font/Lexend-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://global/GameOverScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/Promo/Discord@2x.png" type="Texture" id=4]
[ext_resource path="res://assets/Promo/DiscordOutline@2x.png" type="Texture" id=5]
[ext_resource path="res://assets/Promo/Itch@2x.png" type="Texture" id=6]
[ext_resource path="res://assets/Promo/ItchOutlne@2x.png" type="Texture" id=7]
[ext_resource path="res://obj/Hover.gd" type="Script" id=8]
[ext_resource path="res://obj/RandomAudioStreamPlayer.gd" type="Script" id=9]
[ext_resource path="res://sounds/kenney_impactsounds/Audio/impactWood_heavy_002.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/kenney_impactsounds/Audio/impactWood_heavy_001.ogg" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Display"
length = 3.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3, 1.55 ),
"transitions": PoolRealArray( 1, 0.659754 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.427451 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Stats:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Stats/Cleared:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.6, 1.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 98 ), Vector2( 0, 82 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Stats/Bullets:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Stats/Bullets:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.85, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 171 ), Vector2( 0, 155 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Stats/Time:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Stats/Time:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2.1, 2.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 243 ), Vector2( 0, 227 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Restart:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 3.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ColorRect:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.3, 1.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.14902, 0.14902, 0.14902, 0 ), Color( 0.14902, 0.14902, 0.14902, 0.717647 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Promo:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 3.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/11/type = "method"
tracks/11/path = NodePath("Clicks")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 1.6, 1.85, 2.1, 3.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "advanced_play"
}, {
"args": [  ],
"method": "advanced_play"
}, {
"args": [  ],
"method": "advanced_play"
}, {
"args": [  ],
"method": "advanced_play"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Stats:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Stats/Cleared:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 82 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Stats/Bullets:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Stats/Bullets:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 155 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Stats/Time:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Stats/Time:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 227 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Restart:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ColorRect:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.14902, 0.14902, 0.14902, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Promo:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 6
outline_color = Color( 0.117647, 0.117647, 0.117647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 29
outline_size = 4
outline_color = Color( 0.117647, 0.117647, 0.117647, 1 )
font_data = ExtResource( 2 )

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Display = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -14.0
margin_top = -8.0
margin_right = 1086.0
margin_bottom = 638.0
color = Color( 0.14902, 0.14902, 0.14902, 0 )

[node name="FG" type="Sprite" parent="."]
position = Vector2( 512, 303 )
scale = Vector2( 0.495162, 0.495162 )
texture = ExtResource( 1 )

[node name="Stats" type="Node2D" parent="."]
visible = false

[node name="Cleared" type="Node2D" parent="Stats"]
position = Vector2( 0, 82 )

[node name="ClearedLabel" type="Label" parent="Stats/Cleared"]
margin_right = 1024.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "Cleared: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Bullets" type="Node2D" parent="Stats"]
visible = false
position = Vector2( 0, 155 )

[node name="BulletsLabel" type="Label" parent="Stats/Bullets"]
margin_right = 1000.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "Bullets: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Time" type="Node2D" parent="Stats"]
visible = false
position = Vector2( 0, 227 )

[node name="TimeLabel" type="Label" parent="Stats/Time"]
margin_right = 965.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "Time: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Promo" type="Node2D" parent="."]
visible = false
position = Vector2( 154, 4 )
scale = Vector2( 0.798176, 0.798176 )

[node name="Discord" type="Node2D" parent="Promo"]
position = Vector2( 739, 30 )
script = ExtResource( 8 )
link = "https://discord.com/invite/H7UYMWcFUQ"

[node name="Outline" type="TextureRect" parent="Promo/Discord"]
visible = false
margin_left = -10.0
margin_top = -10.0
margin_right = 246.0
margin_bottom = 201.0
rect_scale = Vector2( 0.508481, 0.508481 )
texture = ExtResource( 5 )

[node name="Discord" type="TextureRect" parent="Promo/Discord"]
margin_right = 216.0
margin_bottom = 168.0
rect_scale = Vector2( 0.508481, 0.508481 )
texture = ExtResource( 4 )

[node name="Itch" type="Node2D" parent="Promo"]
position = Vector2( 888, 22 )
script = ExtResource( 8 )
link = "https://true-narwhak.itch.io/"

[node name="Outline" type="TextureRect" parent="Promo/Itch"]
visible = false
margin_left = -10.0
margin_top = -10.0
margin_right = 246.0
margin_bottom = 201.0
rect_scale = Vector2( 0.508481, 0.508481 )
texture = ExtResource( 7 )

[node name="Discord" type="TextureRect" parent="Promo/Itch"]
margin_right = 216.0
margin_bottom = 168.0
rect_scale = Vector2( 0.508481, 0.508481 )
texture = ExtResource( 6 )

[node name="Restart" type="Label" parent="."]
visible = false
margin_top = 436.0
margin_right = 1024.0
margin_bottom = 473.0
custom_fonts/font = SubResource( 4 )
text = "Press \"Z\" to restart"
align = 1
valign = 1

[node name="Clicks" type="AudioStreamPlayer" parent="."]
bus = "SFX"
script = ExtResource( 9 )
soundlist = [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 10 ) ]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="Promo/Discord/Discord" to="Promo/Discord" method="_on_Discord_mouse_entered"]
[connection signal="mouse_exited" from="Promo/Discord/Discord" to="Promo/Discord" method="_on_Discord_mouse_exited"]
[connection signal="mouse_entered" from="Promo/Itch/Discord" to="Promo/Itch" method="_on_Discord_mouse_entered"]
[connection signal="mouse_exited" from="Promo/Itch/Discord" to="Promo/Itch" method="_on_Discord_mouse_exited"]
